...
                app:cornerRadius="16dp"
                app:elevation="0dp"
                app:strokeWidth="0dp" />

            <!-- Confirm -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonConfirmDelete"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:text="Confirm"
                android:textAllCaps="false"
...
